<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        >

        <ImageView
            android:id="@+id/toolbar_drawer"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:contentDescription="@string/app_name"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:src="@drawable/ic_arrow_left" />


    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/size_15">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_40"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/enter_your_mobile_number"
                android:textSize="35sp"
                android:textColor="@color/overlay_dark_80"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:fontFamily="@font/poppins"
                android:paddingTop="@dimen/margin_5"
                android:paddingEnd="@dimen/margin_5"
                android:paddingBottom="@dimen/margin_5"
                android:text="@string/hello_welcome_back_to_our_account"
                android:textColor="@color/overlay_dark_60"
                android:textSize="16sp" />


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/overlay_dark_80"
                app:boxStrokeWidthFocused="1dp"
                android:hint="@string/enter_mobile_number"
                app:endIconMode="clear_text"
                app:endIconTint="@color/overlay_dark_50"
                app:hintTextColor="@color/overlay_dark_80"
                android:textColorHint="@color/overlay_dark_50"
                app:startIconDrawable="@drawable/ic_phone"
                app:startIconTint="@color/purple_500"
                android:layout_marginTop="40dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_phone_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/overlay_dark_80"
                    android:inputType="number"
                    android:maxLength="10"
                    android:textSize="15sp"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_send_otp"
                style="@style/tutorialBtn"
                android:layout_marginTop="25dp"
                android:text="@string/request_otp"
                android:textAllCaps="false"
                android:elevation="2dp"
                android:textColor="@color/white"
                />


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_35"
                    android:orientation="horizontal">

                    <View
                        android:id="@+id/view2"
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_weight="1"
                        android:layout_marginRight="5dp"
                        android:layout_gravity="center"
                        android:background="@color/overlay_dark_20" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/login_with"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="@color/overlay_dark_70"
                    android:textSize="16sp" />

                    <View
                        android:id="@+id/view3"
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:background="@color/overlay_dark_20" />

                </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/size_40">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/google"
                    android:textStyle="bold"
                    android:background="@drawable/btn_ripple_effect"
                    android:paddingStart="@dimen/size_35"
                    android:paddingEnd="@dimen/size_35"
                    android:drawableLeft="@drawable/google"
                    android:gravity="center"
                    android:padding="@dimen/margin_15"
                    android:layout_marginEnd="@dimen/size_5"
                    android:textSize="18sp"
                    android:textColor="@color/overlay_dark_80"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/facebook"
                    android:padding="@dimen/margin_15"
                    android:layout_marginStart="@dimen/margin_5"
                    android:background="@drawable/btn_ripple_effect"
                    android:paddingStart="@dimen/size_20"
                    android:paddingEnd="@dimen/size_25"
                    android:drawableLeft="@drawable/facebook"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/overlay_dark_80"/>


            </LinearLayout>



        </LinearLayout>

    </ScrollView>


</LinearLayout>

</layout>