<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.StartActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/submitBtn"
        style="@style/tutorialBtn"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/purple_500"
        android:clickable="true"
        android:elevation="2dp"
        android:focusable="true"
        android:text="@string/get_started"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        app:layout_constraintBottom_toTopOf="@id/submitBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_marginBottom="15dp"
            android:padding="16dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/happid"
                android:textColor="@color/orange"
                android:textSize="40sp"
                android:gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/best_markitplace"
                android:layout_gravity="center"
                android:textSize="22sp"
                android:layout_marginTop="@dimen/margin_20"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/overlay_dark_80"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:lineSpacingExtra="2dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/sub_text"
                android:textAlignment="center"
                android:textColor="@color/overlay_dark_70"
                android:textSize="@dimen/content_normal_text_size" />

        </LinearLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>
</layout>