<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        >

        <ImageView
            android:id="@+id/toolbar_drawer"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:contentDescription="@string/app_name"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:src="@drawable/ic_arrow_left" />

        <TextView
            android:id="@+id/text_choose_location"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:text="@string/create_profile"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/overlay_dark_80"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textAllCaps="false"
            />


    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/size_10">

            <LinearLayout
                android:id="@+id/relative_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/size_10"
                android:orientation="vertical"
                >

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardview_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="@dimen/size_10"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="80dp"
                    app:cardCornerRadius="@dimen/size_15"
                    app:cardElevation="5dp"

                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="50dp"
                        android:padding="@dimen/margin_20">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/set_profile"
                            android:textSize="18sp"
                            android:gravity="center"
                            android:textColor="@color/overlay_dark_80"
                            android:layout_marginTop="@dimen/margin_10"
                            android:textStyle="bold"
                            />

                        <TextView
                            style="@style/textname"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:text="@string/first_name" />

                        <EditText
                            android:id="@+id/editFirstName"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            style="@style/profileEditText"
                            android:background="@drawable/bg_textinput_round_solid"
                            android:hint=""
                            android:textSize="16sp"
                            android:inputType="textPersonName"
                            android:text=""
                            android:layout_marginTop="7dp"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            />

                        <TextView
                            style="@style/textname"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:text="@string/last_name" />

                        <EditText
                            android:id="@+id/editLastName"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            style="@style/profileEditText"
                            android:background="@drawable/bg_textinput_round_solid"
                            android:hint=""
                            android:textSize="16sp"
                            android:inputType="textPersonName"
                            android:text=""
                            android:layout_marginTop="7dp"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            />

                        <TextView
                            style="@style/textname"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:text="@string/phone" />

                        <EditText
                            android:id="@+id/editphone"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            style="@style/profileEditText"
                            android:background="@drawable/bg_textinput_round_solid"
                            android:hint=""
                            android:textSize="16sp"
                            android:inputType="phone"
                            android:text=""
                            android:maxLength="10"
                            android:layout_marginTop="7dp"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            />
                        <Button
                            android:id="@+id/btnUpdate"
                            style="@style/tutorialBtn"
                            android:layout_marginTop="20dp"
                            android:text="@string/submit"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/profile_image"
                android:layout_width="110dp"
                android:layout_height="110dp"
                app:civ_shadow="true"
                app:civ_border="true"
                app:civ_shadow_radius="0"
                android:src="@drawable/ic_person"
                app:civ_border_color="@color/orange"
                app:civ_shadow_color="@color/grey_20"
                app:civ_border_width="3dp"
                android:layout_marginTop="@dimen/size_15"
                android:layout_gravity="center_horizontal"
                />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_choosefile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:tint="@android:color/white"
                app:backgroundTint="@color/white"
                app:fabSize="mini"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="95dp"
                android:visibility="visible"
                android:layout_marginBottom="@dimen/size_10"
                android:src="@drawable/ic_edit" />

        </FrameLayout>


    </ScrollView>

</LinearLayout>
</layout>